# exercises

HelloWorld/: a.out  main.cpp
MIT_OCW_1/: CMakeLists.txt  main.cpp
MIT_OCW_2/: CMakeLists.txt  main.cpp
example_chiara_message/: CMakeLists.txt  package.xml
example_chiara_message/include/example_chiara_message/: exmpl_chiara.h
example_chiara_message/src/: exmpl_chiara.cpp  exmpl_listen.cpp  listen.cpp  talker.cpp
