<?xml version="1.0"?>
<package format="2">
    <name>example_chiara_message</name>
    <version>0.0.0</version>
    <description>The example_chiara package, where I try to do my first example_message and other funny stuff</description>


    <maintainer email="chiarag@student.ethz.ch">Chiara Giorgetti</maintainer>
    <license>GNU GPL</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>quad_common</depend>
    <depend>quad_msgs</depend>
    <depend>quad_demo_common</depend>
    <depend>polynomial_trajectories</depend>
    <depend>eigen_catkin</depend>

    <export>

    </export>
</package>
